[package]
name = "Fellowship"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "2.3.2"
solana-sdk = "2.3.1"
log = "0.4"
spl-token = "8.0.0"
base64 = "0.22"
bs58 = "0.5"
env_logger = "0.11"
spl-associated-token-account = "6.0"
solana-system-interface = "1.0"
ngrok = "0.15.0"
futures-util = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
