[package]
name = "Fellowship"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
log = "0.4"
spl-token = "4.0"
base64 = "0.21"
bs58 = "0.5"
env_logger = "0.10"
spl-associated-token-account = "2.3"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
bytes = "1.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
